# pydantic-ai-blocking-approval

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: case_for_core.md  design.md
docs/notes/: StatefulApproval.md  cli_approval_user_stories.md  config_based_approval_spec.md  design_motivation.md  subclass_based_approval.md
docs/specs/: async-callback-support.md
docs/todos/: StatefulApproval.md
example/: session_cache_callback.py
src/pydantic_ai_blocking_approval/: __init__.py  controller.py  decorator.py  memory.py  protocol.py  toolset.py  types.py
tests/: __init__.py  test_controller.py  test_decorator.py  test_example_session_cache.py  test_integration.py  test_memory.py  test_types.py
